demo-ui/public/stylesheets/ons.css
a:link {
    color: #666666;
}

a:visited {
    color: #666666;
}

a:hover {
    color: #4c2c92 ;
}

p.toptext {
  font-size: 0.8em;
  margin-left: 10px;
  margin-right: 10px;
}

.navbar {
  height: 64px;
  color: #525351;
  margin-bottom:0px;
}

.navbar-default {
    background-color: #fff;
    margin-bottom:0px;
}

.index-heading {
    margin: 25px;
}

.sub-nav {
    height: 30px ;
    border: 0px;
    background-color: transparent ;
}

.beta-header {
    float:right;
    text-align: right;
    margin-top: 2px;
    margin-right: 4px;
    font-size: 16px;
}

.panel-heading {
    margin-bottom: 0px;
    margin-right: 7px;
    margin-left: 2px;
}

.sub-nav-heading {
    padding: 0px ;
    height: 50px ;
}

.panel-title {
    font-size: 22px ;
    margin-bottom: 0px ;
    margin-left: 10px;
    text-align: left;
}

.panel-title-error {
    font-size: 20px;
    margin-top: 20px;
    margin-bottom: 20px;
    margin-left: 120px;
    text-align: left;
    color: darkred;
}

.address-panel {
    margin: 10px;
}

.panel-default {
    margin-top: 0px;
    margin-bottom: 10px;
    margin-left: 15px;
    margin-right: 15px;
    min-width: 310px;
    max-width: 310px;
    border:1px solid #ddd;
    padding: 10px;
}

.panel-match {
    margin-top: 0px;
    margin-bottom: 10px;
    min-width: 300px;
    max-width: 900px;
    border-bottom:2px solid #ddd;
    border-top: 0px;
    border-left: 0px;
    border-right: 0px;
    padding-bottom: 20px;
    padding-top: 2px;
    padding-left: 2px;
    padding-right: 2px
}

.panel-match#pager {
    border-bottom:0px;
}

.panel-warning {
    margin: 0px 20px 10px 20px;
    border: 0px solid #ddd;
    vertical-align: middle;
    line-height: 50px;
    padding: 10px;
}

.panel-single {
    margin-top: 0px;
    margin-bottom: 10px;
    margin-left: 0px;
    margin-right: 0px;
    border:0px;
    padding: 2px;
}

.beta-banner {
    background-color: #FF9900;
    color: #fff;
    padding: 10px;
    font-weight: bold;
    font-size: 16px;
    letter-spacing: 4px;
}

.logo {
    margin-top: 6px;
    text-align: left;
    padding: 4px;
    float:left;
}

.btn-search {
    height: 2em;
    background-color: #00914E;
    border-color: #00914E;
    color: #FFFFFF;
    font-size: 1.2em;
    margin-left: 10px;
    }

.btn-search:link,
.btn-search:active,
.btn-search:hover,
.btn-search:visited {
    height: 2em;
    background-color: #353633 ;
    border-color: #353633 ;
}

.btn-search:focus {
    height: 2em;
    background-color: #353633;
    border-color: #353633;
}

.btn-clean {
    height: 2em;
}

input#address.form-control {
    width: 320px;
    height: 40px;
    font-size: 1.1em;
}

input[type="radio"].form-control {
     border: 0px;
     width: 1.8em;
     height: 1.8em;
}

fieldset.radio {
    margin-bottom: 10px;
}

input[type="radio"].form-control + label {
    width: 100px;
    height: 40px;
    font-size: 1.2em;
    margin-right: 10px;
    border: 0px;
    padding: 10px 24px 10px 24px;
    background-color:#DFE0E2;
}

input[type="radio"]#format-paf.form-control {
    width: 100px;
    height: 40px;
    font-size: 2em;
    background-color:gray;
}

input[type="radio"]#format.form-control {
    width: 100px;
    height: 40px;
    font-size: 2em;
    background-color:gray;
}

.btn-group.open .dropdown-toggle {
    font-size: 20px ;
}

.beta {
    color: #FF9900;
}

.panel-body {
    margin-top: 2px ;
}

.thumbnail {
    background-color: #F8F8F8;
    border: none;
}

.index-nav {
    margin: 5px 5px 5px 5px ;
    width: 280px ;
    border:1px solid #ddd;
    padding: 10px;
}

.index-nav a:link {
    text-decoration: none;
}

.index-nav-icon {
    padding-top:40px;
    padding-bottom: 40px;
    color: #BCC547 ;
}

.index-p {
    margin-top: 10px;
}


nav.nav-container {
    width:100%;
    background-color: #DFE0E2 ;
    height:40px;
    clear:left;
    margin-left:2px;
    margin-right:2px;
}

nav {
    margin:0 auto;
    border:1px solid #ddd;
}

nav ul li {
    float:left;
    font-size:1.1em;
    padding: 0px 20px;
    background-color: #DFE0E2 ;
    list-style-type: none;
    margin-top: -8px;
}
nav ul li a {
    color: #666666 ;
    text-decoration: none;
}
nav ul li a:hover {
    color: #4c2c92 ;
    text-decoration: none;
}

dd {
    margin-left: 10px;
}

dl {
    display: block;
    margin: 10px 0px 20px 0px;
}

.alert-danger {
    background-color: #ffe6e6 ;
    color: #0066ff;
    text-decoration: underline;
    margin-left:0px;
    height:50px;
    padding-left: 10px;
}

section.content {
    margin-top: 10px;
    margin-bottom: 8%;
}

#footer .footer-wrapper {
    padding-top: 10px;
}

p.pad{
    height:90px;
}

span.error:before {
    content:"• ";
}

span.error   {
    cursor: pointer;
}

h3.green {
    margin-top:20px;
    color: #00914E;
    font-size:1.2em;
    padding-top:4px;
    padding-left:7px;
}

div.matchResults{
    width: 100%;
}

div.match-conf{
    text-align:right;
    white-space:nowrap;
    float: left;
    width: 100%;
}

div.uprn-txt{
    white-space:nowrap;
    text-align:left;
    float: left;
    width: 70%;
}

div.map-link-txt{
    text-align:right;
    float: left;
    width: 30%;
}

div.resultRow{
    padding-top: 4px;
    padding-bottom: 4px;
    clear: both;
    min-height:24px;
}

.map-link-txt a:link {
    color: #489DC4;
}

.map-link-txt a:hover {
    color: #4c2c92 ;
}

p.messageDetail{
    margin-top:0px;
    -webkit-margin-before: 0em;
    color:darkred;
}

p.errorBody{
    color: darkred;
}

div.paf-nag-switch-buttons{
    color: #aaa;
    display: inline-block;
    background: #eee;
    padding: 5px 6px;
}
div.paf-nag-switch-buttons span{
    display: inline-block;
    padding: 0px 10px;
    border: 1px solid #999;

}

.formatted-button-active{
    background-color: #00914E;
}

div.paf-nag-switch-buttons span:hover{
    background-color: #00914E;
    cursor:pointer;
}

.pagecontainer {
    max-width:100%;
    text-align:center;
}

.pageleft {
    float:left;
    width:110px;
    border: 1px solid #377894;
}

.pageleft a {
    color: #377894;
    text-decoration: none;
    font-size:0.9em;
    font-weight:700;
}

.pagecentre {
    display: inline-block;
    vertical-align: middle;
    margin:0 auto;
    width:90px;
    color:gray;
}

.pageright {
    float:right;
    width:100px;
    border: 1px solid #377894;
}

.pageright a {
    color: #377894;
    text-decoration: none;
    font-size:0.9em;
    font-weight:700;
}

.pl1 {
    pointer-events: none;
    cursor: default;
    color:white;
    border: 0px;
}

.pl1  a {
    color:white;
}

.prtrue {
    pointer-events: none;
    cursor: default;
    color:white;
    border: 0px;
}

.prtrue  a {
    color:white;
}

